--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,34 @@
     <title>WisataOne - GDG Banda Aceh</title>
 
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"> -->
     <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>-->
     <!-- Popper JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <!-- Latest compiled JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>-->
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+    <!-- //For-Mobile-Apps-and-Meta-Tags -->
+    <!-- Custom Theme files -->
+    <link href="assets/frontend/css/bootstrap.css" type="text/css" rel="stylesheet" media="all">
+    <link href="assets/frontend/css/style.css" type="text/css" rel="stylesheet" media="all">
+    <link rel="stylesheet" href="assets/frontend/css/jquery-ui.css" />
+    <link rel="stylesheet" href="assets/frontend/css/smoothbox.css" type='text/css' media="all" />
+    <!-- //Custom Theme files -->
+    <link rel="stylesheet" type="text/css" href="assets/frontend/css/easy-responsive-tabs.css " />
 
+    <!-- font-awesome-icons -->
+    <link rel="stylesheet" href="assets/frontend/css/font-awesome.min.css" />
+    <!-- //font-awesome-icons -->
+    <!-- js -->
+    <script type='text/javascript' src='assets/frontend/js/jquery-2.2.3.min.js'></script>
+    <!-- //js -->
+    <!-- web-fonts -->
+    <link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese" rel="stylesheet">
+    <link href="//fonts.googleapis.com/css?family=Bitter:400,400i,700&subset=latin-ext" rel="stylesheet">
     <!-- CDN AngularJS -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular-route.min.js"></script>
@@ -23,9 +43,14 @@
     <!-- Script Firebase -->
     <script src="https://www.gstatic.com/firebasejs/3.6.6/firebase.js"></script>
     <script src="controllers/firebase-config.js"></script>
-
+    <script type="text/javascript" src="controllers/app.js"></script>
+    <script type="text/javascript" src="controllers/BerandaController.js"></script>
+    <script type="text/javascript" src="controllers/LoginController.js"></script>
   </head>
-  <body ng-app="myApp">
+  <body class="bg" ng-app="myApp">
+    <div ng-include="'header.html'"></div>
+
+
     <ng-view></ng-view>
   </body>
 </html>
