--- a/public/index.html
+++ b/public/index.html
@@ -49,8 +49,7 @@
   </head>
   <body class="bg" ng-app="myApp">
     <div ng-include="'header.html'"></div>
-
-
     <ng-view></ng-view>
+    <div ng-include="'footer.html'"></div>
   </body>
 </html>
